// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTextColor is rendered 1`] = `
<span
  aria-label="aria-label"
  class="testClass1 testClass2 css-7fidck-euiTextColor-default"
  data-test-subj="test subject string"
/>
`;

exports[`EuiTextColor props cloneElement is rendered 1`] = `
<p
  class="css-1jfxl0s-euiTextColor-default"
>
  Content
</p>
`;

exports[`EuiTextColor props color is rendered with custom color 1`] = `
<span
  class="css-3cjmlu-euiTextColor-customColor"
  style="color:#ff0000"
>
  <p>
    Content
  </p>
</span>
`;

exports[`EuiTextColor props color is rendered with named color 1`] = `
<span
  class="css-1yjx65l-euiTextColor-warning"
>
  <p>
    Content
  </p>
</span>
`;
